Fix fade in issues with offer section on small desktops

--- a/dev/components/offer/_offer.scss
+++ b/dev/components/offer/_offer.scss
@@ -9,6 +9,16 @@
     background-size: cover;
     clip-path: polygon(0% 0%, 100% 3rem, 100% calc(100% - 3rem), 0% 100%);
 
+    &__wrapper {
+        &--r {
+            padding-top: 36.8rem;
+
+            @include respond('xl') {
+                padding-top: 6rem;
+            }
+        }
+    }
+
     &__col-l {
         position: relative;
         left: -6rem;
@@ -26,7 +36,7 @@
         position: relative;
         z-index: 1;
         opacity: 0;
-        transform: translateY(100%);
+        transform: translateY(-50%);
 
         &--l {
             padding: 6.8rem 6.6rem 7.9rem 9.4rem;
@@ -49,12 +59,7 @@
 
         &--r {
             padding: 6.1rem 5.1rem 5.4rem 5.6rem;
-            margin-top: 36.8rem;
             clip-path: polygon(0% .5625vw, calc(100% - 1.6875vw) 0%, 100% calc(100% - .5625vw), 1.6875vw 100%);
-
-            @include respond('xl') {
-                margin-top: 6rem;
-            }
 
             @include respond('md') {
                 padding: 3rem 3rem 3rem 4.5rem;
